[package]
name = "yabe"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Integer bitcasts through the use of Mul and autoref specialization"
repository = "https://github.com/Kolsky/yabe"
categories = ["algorithms", "no-std::no-alloc"]
keywords = ["cast", "convert", "integer", "extend", "truncate"]

[dependencies]
